# LFS-GUI-INSTALLER

./: CMakeLists.txt  README.md  STEPS TAKEN.txt  TODO.txt  install-driver.sh  todo.txt
files/: bashrc
old/: Next steps.txt  STEPS TAKEN.txt  notes.txt
scratchpkg_repo/: REPO  unchanged.txt
scratchpkg_repo/acl/: spkgbuild
scratchpkg_repo/attr/: spkgbuild
scratchpkg_repo/autoconf/: spkgbuild
scratchpkg_repo/automake/: spkgbuild
scratchpkg_repo/bash/: spkgbuild
scratchpkg_repo/bc/: spkgbuild
scratchpkg_repo/binutils/: spkgbuild
scratchpkg_repo/bison/: spkgbuild
scratchpkg_repo/bzip2/: spkgbuild
scratchpkg_repo/coreutils/: spkgbuild
scratchpkg_repo/dejagnu/: spkgbuild
scratchpkg_repo/diffutils/: spkgbuild
scratchpkg_repo/e2fsprogs/: spkgbuild
scratchpkg_repo/elfutils/: spkgbuild
scratchpkg_repo/expat/: spkgbuild
scratchpkg_repo/expect/: spkgbuild
scratchpkg_repo/file/: spkgbuild
scratchpkg_repo/findutils/: spkgbuild
scratchpkg_repo/flex/: spkgbuild
scratchpkg_repo/gawk/: spkgbuild
scratchpkg_repo/gcc/: spkgbuild
scratchpkg_repo/gdbm/: spkgbuild
scratchpkg_repo/gettext/: spkgbuild
scratchpkg_repo/glibc/: spkgbuild
scratchpkg_repo/gmp/: spkgbuild
scratchpkg_repo/gperf/: spkgbuild
scratchpkg_repo/grep/: spkgbuild
scratchpkg_repo/groff/: spkgbuild
scratchpkg_repo/gzip/: spkgbuild
scratchpkg_repo/iana-etc/: spkgbuild
scratchpkg_repo/inetutils/: spkgbuild
scripts/: 1.sh  default.sh  install.sh  install.sh-bak  prepare.sh
src/: installerwindow.cpp  installerwindow.h  main.cpp
tools/: autountar.sh
(+106 files in other folders)
